# helmholtz

./: .gitignore  3d.hscene  CMakeLists.txt  LICENSE  README.md  agg.sh  cool_1.hscene  cool_scene_2.hscene  dynamic_grid.hscene  file  file3  imgui.ini  join_cpp.sh  out  performance.hscene
include/: camera.h  diffraction_edge.h  fdtd_solver.h  model_loader.h  node_manager.h  node_renderer.h  propagation_renderer.h  radio_system.h  renderer.h  scene_serializer.h  spatial_index.h  ui_manager.h  visual_settings.h  volume_renderer.h
shaders/: fdtd_update_e.comp  fdtd_update_h.comp  fdtd_volume.frag  mark_geometry.comp  scene.frag  scene.vert  shadow_depth.frag  volume.vert
src/: camera.cpp  fdtd_solver.cpp  main.cpp  model_loader.cpp  node_manager.cpp  node_renderer.cpp  propagation_renderer.cpp  radio_system.cpp  renderer.cpp  scene_serializer.cpp  spatial_index.cpp  ui_manager.cpp  volume_renderer.cpp
